--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
-
+<link rel="stylesheet" href="styles/style.css">
     <title>Bootstrap Sandbox</title>
   </head>
   <div class="container-fluid">
@@ -35,7 +35,7 @@
             </div>
         </div>
         <!-- LATEST CRYPTO PRICES -->
-        <div class="col py-3">
+        <div id="body" class="col py-3">
                 <div class="container">
                   <div class="row">
                     <div class="col text-center">
@@ -47,48 +47,15 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                      <div class="card">
-                        <div class="card-body text-center">
-                          <img
-                            src="img/person1.jpg"
-                            alt=""
-                            class="img-fluid rounded-circle w-50 mb-3"
-                          />
-                          <h3>Susan Williams</h3>
-                          <h5 class="text-muted">Lead Writer</h5>
-                          <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                            commodi nostrum, ab libero voluptas officia.
-                          </p>
-                          <div class="d-flex justify-content-center">
-                            <div class="p-4">
-                              <a href="http://facebook.com">
-                                <i class="fa fa-facebook"></i>
-                              </a>
-                            </div>
-                            <div class="p-4">
-                              <a href="http://twitter.com">
-                                <i class="fa fa-twitter"></i>
-                              </a>
-                            </div>
-                            <div class="p-4">
-                              <a href="http://instagram.com">
-                                <i class="fa fa-instagram"></i>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <div id="row" class="row">
+                    
                 </div>
              
         </div>
     </div>
 </div>
 <!-- SCRIPTS -->
+<script src="scripts/domUi.js"></script>
 <script src="scripts/apiData.js"></script>
 <script src="scripts/application.js"></script>
 <!-- CDNS -->
