--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     </div>
 </div>
 <!-- SCRIPTS -->
+<script src="scripts/localStorage.js"></script>
 <script src="scripts/domUi.js"></script>
 <script src="scripts/apiData.js"></script>
 <script src="scripts/application.js"></script>
