--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@
         </div>
     </div>
 </div>
+<!-- CHART.JS CDN -->
+<script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.2/chart.min.js"
+      integrity="sha512-tMabqarPtykgDtdtSqCL3uLVM0gS1ZkUAVhRFu1vSEFgvB73niFQWJuvviDyBGBH22Lcau4rHB5p2K2T0Xvr6Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 <!-- SCRIPTS -->
+<script src="scripts/cryptoChart.js"></script>
 <script src="scripts/localStorage.js"></script>
 <script src="scripts/domUi.js"></script>
 <script src="scripts/apiData.js"></script>
