--- a/index.html
+++ b/index.html
@@ -146,10 +146,11 @@
       referrerpolicy="no-referrer"
     ></script>
 <!-- SCRIPTS -->
-<script src="scripts/cryptoChart.js"></script>
+<script src="scripts/charts.js"></script>
 <script src="scripts/localStorage.js"></script>
 <script src="scripts/domUi.js"></script>
 <script src="scripts/apiData.js"></script>
+<script src="scripts/helperFunc.js"></script>
 <script src="scripts/application.js"></script>
 <!-- CDNS -->
 <script src="https://kit.fontawesome.com/29d490a53c.js" crossorigin="anonymous"></script>
