--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </div>
                    <!-- MODAL LEADERBOARD -->
                    <!-- class="modal" -->
-                   <div   id="leaderModal">
+                   <div class="modal mr-2"   id="leaderModal">
                     <div class="modal-dialog modal-lg modal-dialog-centered">
                       <div class="modal-content">
                         <div id="lModalHeader" class="modal-header">
