--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
 <link rel="stylesheet" href="styles/style.css">
+
     <title>Crypto Stats</title>
   </head>
   <div class="container-fluid">
@@ -173,5 +174,7 @@
   integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
   crossorigin="anonymous"
 ></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@1.2.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-crosshair@1"></script>
 </body>
 </html>
