--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -81,6 +81,10 @@
                     <div class="d-flex">
                         <i class="text-warning far fa-star fa-3x"></i>
                         <h4 id="watchListText" class="text-info ml-2"> Your Watchlist</h4>
+                        <div class="ml-auto mt-2 d-flex">
+                            <i class="fas fa-coins fa-2x mr-2"></i>
+                        <h4 id="coinCounter" class="text-info"></h4>
+                        </div>
                     </div>
                 </div>
                 <div class="card-body">
