Main Leaderboard Fixed
Fixed an issue with method { clearLeader } that cleared all fields within main leaderboard

--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -71,6 +71,15 @@
                   <span class="ms-1 d-none d-sm-inline">Watchlist</span></a
                 >
               </li>
+            <li>
+                <a
+                  href="watchlist.html"
+                  class="text-white nav-link px-0 align-middle"
+                >
+                <i class="fas fa-wallet fa-2x ml-1"></i>
+                  <span class="ms-1 d-none d-sm-inline">Portfolio</span></a
+                >
+              </li>
             </ul>
           </div>
         </div>
