--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </li>
               <li>
                 <a
-                  href="watchlist.html"
+                  href="pages/portfolio.html"
                   class="text-white nav-link px-0 align-middle"
                 >
                   <i class="fas fa-wallet fa-2x ml-1"></i>
@@ -223,6 +223,7 @@
                 </div>
               </div>
               <div class="col-3"></div>
+              <!-- SEARCH BOX -->
               <div id="zIndexSearch" class="col">
                 <table id="tableNone" class="d-none border table-hover">
                   <tbody
