--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -14,116 +14,86 @@
 
     <title>Crypto Stats</title>
   </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row flex-nowrap">
-        <div class="col-auto col-md-2 col-xl-2 px-sm-2 px-0 bg-dark shadow-lg">
-          <div
-            style="height: 100vh"
-            class="
-              d-flex
-              flex-column
-              align-items-center align-items-sm-start
-              px-3
-              pt-2
-              text-white
-              min-vh-100
-            "
-          >
-            <a
-              href="/"
-              class="
-                d-flex
-                align-items-center
-                pb-3
-                mb-md-0
-                me-md-auto
-                text-white text-decoration-none
-              "
-            >
-              <span class="fs-5 d-sm-inline">Crypto Stats</span>
-            </a>
-            <ul
-              class="
-                nav nav-pills
-                flex-column
-                mb-sm-auto mb-0
-                align-items-center align-items-sm-start
-              "
-              id="menu"
-            >
-              <li class="nav-item">
-                <a
-                  href="../index.html"
-                  class="text-white nav-link align-middle px-1"
-                >
-                <i class="fa fa-tachometer fa-2x pr-2"></i>
-                  <span class="ms-1 d-sm-inline">Dashboard</span>
-                </a>
-              </li>
 
-              <li>
-                <a
-                  href="watchlist.html"
-                  class="text-white nav-link px-0 align-middle"
-                >
-                <i class="far fa-star fa-2x"></i>
-                  <span class="ms-1 d-none d-sm-inline">Watchlist</span></a
-                >
-              </li>
-            <li>
-                <a
-                  href="portfolio.html"
-                  class="text-white nav-link px-0 align-middle"
-                >
-                <i class="fas fa-wallet fa-2x ml-1"></i>
-                  <span class="ms-1 d-none d-sm-inline">Portfolio</span></a
-                >
-              </li>
-            </ul>
+  <header>
+    <div class="container">
+      <nav
+        id="navigation"
+        class="navbar navbar-expand-lg navbar-light bg-light mb-2 shadow-sm"
+      >
+        <!-- <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+
+        <div class="navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto">
+            <li class="nav-item d-flex mr-5">
+              <i class="text-primary fa fa-tachometer fa-2x"></i>
+              <a class="nav-link text-primary" href="../index.html"
+                >Dashboard <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item d-flex mr-5">
+              <i class="text-muted far fa-star fa-2x"></i>
+              <a class="nav-link" href="watchlist.html">Watchlist</a>
+            </li>
+
+            <li class="nav-item d-flex">
+              <i class="text-muted fas fa-wallet fa-2x"></i>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <body>
+    <!-- Main Container -->
+    <div id="body" class="col py-3">
+      <div class="container">
+        <div class="card">
+          <div class="card-header">
+            <div class="d-flex">
+              <i class="text-warning far fa-star fa-2x"></i>
+              <h5 id="watchListText" class="text-info ml-2 mt-1">
+                Your Watchlist
+              </h5>
+              <div class="ml-auto mt-2 d-flex">
+                <i class="fas fa-coins fa-2x mr-2"></i>
+                <h4 id="coinCounter" class="text-info"></h4>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="overflow-scroll card-body" id="cryptoContainer">
+              <div id="row" class="row"></div>
+            </div>
           </div>
         </div>
-        <!-- Main Container -->
-        <div id="body" class="col py-3">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex">
-                        <i class="text-warning far fa-star fa-3x"></i>
-                        <h4 id="watchListText" class="text-info ml-2"> Your Watchlist</h4>
-                        <div class="ml-auto mt-2 d-flex">
-                            <i class="fas fa-coins fa-2x mr-2"></i>
-                        <h4 id="coinCounter" class="text-info"></h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                  <div class="overflow-scroll card-body" id="cryptoContainer">
-                    <div id="row" class="row"></div>
-                  </div>
-                </div>
+        <!-- LeaderBoard Modal -->
+        <div class="modal mr-2" id="leaderModal">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div id="lModalHeader" class="modal-header">
+                <button class="close" data-dismiss="modal">&times;</button>
               </div>
-              <!-- LeaderBoard Modal -->
-              <div class="modal mr-2" id="leaderModal">
-                <div class="modal-dialog modal-lg modal-dialog-centered">
-                  <div class="modal-content">
-                    <div id="lModalHeader" class="modal-header">
-                      <button class="close" data-dismiss="modal">&times;</button>
-                    </div>
-    
-                    <!-- Modal Content -->
-                    <div id="lModalBody" class="modal-body"></div>
-                    <div class="modal-footer">
-                      <button
-                        id="closeModal"
-                        class="btn btn-secondary"
-                        data-dismiss="modal"
-                      >
-                        Close
-                      </button>
-                    </div>
-                  </div>
-                </div>
+
+              <!-- Modal Content -->
+              <div id="lModalBody" class="modal-body"></div>
+              <div class="modal-footer">
+                <button
+                  id="closeModal"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- CHART.JS CDN -->
@@ -141,7 +111,7 @@
     <script src="../scripts/apiData.js"></script>
     <script src="../scripts/helperFunc.js"></script>
     <script src="/scripts/watchList/application.js"></script>
-    
+
     <!-- <script src="scripts/charts.js"></script>
     <script src="scripts/localStorage.js"></script>
     <script src="scripts/domUi.js"></script>
