--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,34 +22,37 @@
   <header>
     <div class="container">
       <nav
-        id="navigation"
-        class="navbar navbar-expand-lg navbar-light bg-light mb-2 shadow-sm"
+      id="navigation"
+      class="navbar navbar-expand navbar-light bg-light mb-2 shadow-sm w-100"
+    >
+      <!-- <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+
+      <div
+        class="navbar-collapse d-flex justify-content-around"
+        id="navbarSupportedContent"
       >
-        <!-- <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
+        <ul class="navbar-nav w-100 d-flex justify-content-around">
+          <li class="nav-item d-flex">
+            <i class="d-none d-md-block text-info fa fa-tachometer fa-2x"></i>
+            <a class="nav-link h6 text-info" href="../index.html"
+              >Dashboard <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item d-flex">
+            <i class="d-none d-md-block text-muted far fa-star fa-2x"></i>
+            <a class="nav-link h6" href="watchlist.html">Watchlist</a>
+          </li>
 
-        <div class="navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto">
-            <li class="nav-item d-flex mr-5">
-              <i class="text-primary fa fa-tachometer fa-2x"></i>
-              <a class="nav-link text-primary" href="../index.html"
-                >Dashboard <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item d-flex mr-5">
-              <i class="text-muted far fa-star fa-2x"></i>
-              <a class="nav-link" href="watchlist.html">Watchlist</a>
-            </li>
-
-            <li class="nav-item d-flex">
-              <i class="text-muted fas fa-wallet fa-2x"></i>
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+          <li class="nav-item d-flex">
+            <i class="d-none d-md-block text-muted fas fa-wallet fa-2x"></i>
+            <a class="nav-link h6" href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     </div>
   </header>
   <body class="">
